; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_px.c_px_strerror.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_px.c_px_strerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.error_desc = type { i8*, i32 }

@px_err_list = common dso_local global %struct.error_desc* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"Bad error code\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @px_strerror(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.error_desc*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load %struct.error_desc*, %struct.error_desc** @px_err_list, align 8
  store %struct.error_desc* %5, %struct.error_desc** %4, align 8
  br label %6

6:                                                ; preds = %22, %1
  %7 = load %struct.error_desc*, %struct.error_desc** %4, align 8
  %8 = getelementptr inbounds %struct.error_desc, %struct.error_desc* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %25

11:                                               ; preds = %6
  %12 = load %struct.error_desc*, %struct.error_desc** %4, align 8
  %13 = getelementptr inbounds %struct.error_desc, %struct.error_desc* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load %struct.error_desc*, %struct.error_desc** %4, align 8
  %19 = getelementptr inbounds %struct.error_desc, %struct.error_desc* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  store i8* %20, i8** %2, align 8
  br label %26

21:                                               ; preds = %11
  br label %22

22:                                               ; preds = %21
  %23 = load %struct.error_desc*, %struct.error_desc** %4, align 8
  %24 = getelementptr inbounds %struct.error_desc, %struct.error_desc* %23, i32 1
  store %struct.error_desc* %24, %struct.error_desc** %4, align 8
  br label %6

25:                                               ; preds = %6
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %26

26:                                               ; preds = %25, %17
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
